AUTHX-11 Add session API to swagger
